# 199os-customer-success-mcp

./: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .env.test  .gitignore  .pre-commit-config.yaml  =4.2.0  CI_CD_FILES_CREATED.txt  CONFIGURATION.md  CS_MCP_DEVELOPMENT_PLAN.md  Dockerfile  INSTALLATION.md  ONBOARDING_TOOLS_QUICK_REFERENCE.md  PHASE_1_COMPLETION_SUMMARY.md  PRODUCTION_CHECKLIST.md  QUICK_START_CI_CD.md  README.md  REVOPS_SUITE_COMPREHENSIVE_AUDIT.md  SECURITY.md  TEST-CHECKLIST.md  TESTING.md  WIZARD_QUICK_START.md  alembic.ini  autonomous_config.json  dev-test.sh  dev_server.py  dev_server.py.backup  dev_server_fixed.py  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  quick-test.sh  requirements-dev.txt  requirements.txt  server.py  (+1 more)
.github/: CI_CD_SETUP.md  TESTING_GUIDE.md
.github/workflows/: README.md  build.yml  ci.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  lint.yml  test.yml
autonomous/: __init__.py  config_manager.py  run_autonomous.py  scheduler.py
docs/: PRODUCTION_READINESS_AUDIT.md  SECRETS_MANAGEMENT.md
migrations/: README_DATABASE.md  env.py
monitoring/: README.md  alertmanager.yml  alerts.yml  docker-compose.monitoring.yml  prometheus.yml
scripts/: README.md  backup_cron.sh  backup_database.sh  extract_tools.py  migrate_tool_to_composio.py  restore_database.sh  security_scan.sh
src/: decorators.py  initialization.py
tests/: __init__.py  conftest.py  load_test.py  test_e2e.py  test_fixtures.py  test_performance.py
(+259 files in other folders)
